--- a/dbserver.yaml
+++ b/dbserver.yaml
@@ -4,9 +4,9 @@
   tasks:  
     - name: install mysql
       ansible.builtin.dnf:
-        name: mysql
+        name: mysql-server
         state:  latest
-    - name: Start mysql service
+    - name: Start and enable mysql service
       ansible.builtin.service:
         name: mysqld
         state: started
