--- a/dbserver.yaml
+++ b/dbserver.yaml
@@ -11,3 +11,10 @@
         name: mysqld
         state: started
         enabled:  yes
+    #check root password is set or not
+    - name: connect to db using root
+      community.mysql.mysql_info:
+        login_user: root
+        login_password: ExpensesApp@1
+        login_host: db.expensesnote.site
+        filter: databases
