adding files to the git

--- a/dbserver.yaml
+++ b/dbserver.yaml
@@ -25,8 +25,8 @@
     - name: connect to db using root
       community.mysql.mysql_info:
         login_user: root
-        login_password: {{mysql_password}}
-        login_host: {{dbhost}}
+        login_password: "{{mysql_password}}"
+        login_host: "{{dbhost}}""
         filter: databases
       ignore_errors:  yes
       register: userinfo
