--- a/dbserver.yaml
+++ b/dbserver.yaml
@@ -40,5 +40,5 @@
         msg:  "output:{{mysql_connection_output}}"
 
     - name: set root password
-      ansible.builtin.command:  "mysql_secure_installation --set-root-pass{{mysql_password}}"
-      when: mysql_connection_output.failed is true #boolean datatyep
+      ansible.builtin.command:  "mysql_secure_installation --set-root-pass {{ mysql_password }}"
+      when: mysql_connection_output.failed is true #boolean datatype
