--- a/backend.yaml
+++ b/backend.yaml
@@ -1,5 +1,6 @@
 - name: backend configuration
   hosts:  app
+  become: yes
   vars_prompt:
     name: mysql_password
     prompt: please enter your password
