--- a/backend.yaml
+++ b/backend.yaml
@@ -34,3 +34,8 @@
       ansible.builtin.command:  npm install
       args:
         chdir:  /app
+    - name: copy backend service file   
+      ansible.builtin.copy:
+        src:  backend.service
+        dest: /etc/systemd/system/backend.service
+         
