--- a/frontend.yaml
+++ b/frontend.yaml
@@ -11,3 +11,8 @@
         name: nginx
         state: started
         enabled:  yes
+
+    - name: Remove file (delete file)
+      ansible.builtin.file:
+        path: /usr/share/nginx/html/*
+        state: absent
