--- a/frontend.yaml
+++ b/frontend.yaml
@@ -12,7 +12,7 @@
         state: started
         enabled:  yes
 
-    - name: Remove file (delete file)
+    - name: Remove files 
       ansible.builtin.file:
-        path: /usr/share/nginx/html/*
+        path: /usr/share/nginx/html
         state: absent
