--- a/frontend.yaml
+++ b/frontend.yaml
@@ -16,3 +16,8 @@
       ansible.builtin.file:
         path: /usr/share/nginx/html
         state: absent
+    - name: Create a directory 
+      ansible.builtin.file:
+        path: /usr/share/nginx/html
+        state: directory
+    
